--- a/entropy_2D/myinterface2D/myinterface2D.vcproj
+++ b/entropy_2D/myinterface2D/myinterface2D.vcproj
@@ -48,14 +48,14 @@
 				AdditionalIncludeDirectories="&quot;../..&quot;;$(ProjectDir)"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				StringPooling="true"
-				RuntimeLibrary="3"
+				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
 				PrecompiledHeaderThrough="stdafx.h"
 				PrecompiledHeaderFile=".\Release/myinterface.pch"
 				AssemblerListingLocation=".\Release/"
-				ObjectFile=".\Release/"
-				ProgramDataBaseFileName=".\Release/"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\vc80.pdb"
 				WarningLevel="0"
 				SuppressStartupBanner="true"
 				CompileAs="2"
@@ -74,10 +74,10 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="glew32.lib"
-				OutputFile=".\Release/myinterface.exe"
+				OutputFile="$(OutDir)\$(ProjectName).exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="&quot;C:\Program Files\CGAL-3.3.1\lib&quot;;&quot;C:\Program Files\CGAL-3.3.1\auxiliary\gmp\lib&quot;"
+				AdditionalLibraryDirectories=""
 				ProgramDatabaseFile=".\Release/myinterface.pdb"
 				SubSystem="1"
 				TargetMachine="1"
@@ -146,8 +146,8 @@
 				RuntimeLibrary="3"
 				PrecompiledHeaderFile=".\Debug/myinterface.pch"
 				AssemblerListingLocation=".\Debug/"
-				ObjectFile=".\Debug/"
-				ProgramDataBaseFileName=".\Debug/"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\vc80.pdb"
 				WarningLevel="0"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
@@ -167,10 +167,10 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="glew32.lib"
-				OutputFile=".\Debug/myinterface.exe"
+				OutputFile="$(OutDir)\$(ProjectName).exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="&quot;C:\Program Files\CGAL-3.3.1\lib&quot;;&quot;C:\Program Files\CGAL-3.3.1\auxiliary\gmp\lib&quot;"
+				AdditionalLibraryDirectories=""
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile=".\Debug/myinterface.pdb"
 				SubSystem="1"
@@ -240,8 +240,8 @@
 				RuntimeLibrary="3"
 				PrecompiledHeaderFile=".\Debug/myinterface.pch"
 				AssemblerListingLocation=".\Debug/"
-				ObjectFile=".\Debug/"
-				ProgramDataBaseFileName=".\Debug/"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\vc80.pdb"
 				WarningLevel="0"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
@@ -261,10 +261,10 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="glew32.lib"
-				OutputFile=".\Debug/myinterface.exe"
+				OutputFile="$(OutDir)\$(ProjectName).exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="&quot;C:\Program Files\CGAL-3.3.1\lib&quot;;&quot;C:\Program Files\CGAL-3.3.1\auxiliary\gmp\lib&quot;"
+				AdditionalLibraryDirectories=""
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile=".\Debug/myinterface.pdb"
 				SubSystem="1"
@@ -334,13 +334,15 @@
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
-				PrecompiledHeaderThrough="stdafx.h"
-				PrecompiledHeaderFile=".\Release/myinterface.pch"
-				AssemblerListingLocation=".\Release/"
-				ObjectFile=".\Release/"
-				ProgramDataBaseFileName=".\Release/"
-				WarningLevel="0"
+				PrecompiledHeaderThrough=""
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation=""
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\vc80.pdb"
+				WarningLevel="3"
 				SuppressStartupBanner="true"
+				Detect64BitPortabilityProblems="true"
+				DebugInformationFormat="3"
 				CompileAs="2"
 			/>
 			<Tool
@@ -357,10 +359,10 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="glew32.lib"
-				OutputFile=".\Release/myinterface.exe"
+				OutputFile="$(OutDir)\$(ProjectName).exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="&quot;C:\Program Files\CGAL-3.3.1\lib&quot;;&quot;C:\Program Files\CGAL-3.3.1\auxiliary\gmp\lib&quot;"
+				AdditionalLibraryDirectories=""
 				ProgramDatabaseFile=".\Release/myinterface.pdb"
 				SubSystem="1"
 				TargetMachine="1"
