--- a/entropy_3D/myinterface3D/myinterface3D.vcproj
+++ b/entropy_3D/myinterface3D/myinterface3D.vcproj
@@ -46,16 +46,16 @@
 				Optimization="2"
 				InlineFunctionExpansion="1"
 				AdditionalIncludeDirectories="&quot;../..&quot;;$(ProjectDir)"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				StringPooling="true"
-				RuntimeLibrary="3"
+				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
 				PrecompiledHeaderThrough="stdafx.h"
 				PrecompiledHeaderFile=".\Release/myinterface.pch"
 				AssemblerListingLocation=".\Release/"
-				ObjectFile=".\Release/"
-				ProgramDataBaseFileName=".\Release/"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\vc80.pdb"
 				WarningLevel="0"
 				SuppressStartupBanner="true"
 				CompileAs="2"
@@ -73,11 +73,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="glew32.lib libshader.lib "
-				OutputFile=".\Release/myinterface.exe"
+				AdditionalDependencies="glew32.lib"
+				OutputFile="$(OutDir)\$(ProjectName).exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="&quot;C:\Program Files\CGAL-3.3.1\lib&quot;;&quot;C:\Program Files\CGAL-3.3.1\auxiliary\gmp\lib&quot;"
+				AdditionalLibraryDirectories=""
 				ProgramDatabaseFile=".\Release/myinterface.pdb"
 				SubSystem="1"
 				TargetMachine="1"
@@ -146,8 +146,8 @@
 				RuntimeLibrary="3"
 				PrecompiledHeaderFile=".\Debug/myinterface.pch"
 				AssemblerListingLocation=".\Debug/"
-				ObjectFile=".\Debug/"
-				ProgramDataBaseFileName=".\Debug/"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\vc80.pdb"
 				WarningLevel="0"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
@@ -166,11 +166,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="glew32.lib libshader.lib "
-				OutputFile=".\Debug/myinterface.exe"
+				AdditionalDependencies="glew32.lib libshader_d.lib "
+				OutputFile="$(OutDir)\$(ProjectName).exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="&quot;C:\Program Files\CGAL-3.3.1\lib&quot;;&quot;C:\Program Files\CGAL-3.3.1\auxiliary\gmp\lib&quot;"
+				AdditionalLibraryDirectories=""
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile=".\Debug/myinterface.pdb"
 				SubSystem="1"
@@ -240,8 +240,8 @@
 				RuntimeLibrary="3"
 				PrecompiledHeaderFile=".\Debug/myinterface.pch"
 				AssemblerListingLocation=".\Debug/"
-				ObjectFile=".\Debug/"
-				ProgramDataBaseFileName=".\Debug/"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\vc80.pdb"
 				WarningLevel="0"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
@@ -261,10 +261,10 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="glew32.lib"
-				OutputFile=".\Debug/myinterface.exe"
+				OutputFile="$(OutDir)\$(ProjectName).exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="&quot;C:\Program Files\CGAL-3.3.1\lib&quot;;&quot;C:\Program Files\CGAL-3.3.1\auxiliary\gmp\lib&quot;"
+				AdditionalLibraryDirectories=""
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile=".\Debug/myinterface.pdb"
 				SubSystem="1"
@@ -337,8 +337,8 @@
 				PrecompiledHeaderThrough="stdafx.h"
 				PrecompiledHeaderFile=".\Release/myinterface.pch"
 				AssemblerListingLocation=".\Release/"
-				ObjectFile=".\Release/"
-				ProgramDataBaseFileName=".\Release/"
+				ObjectFile="$(IntDir)\"
+				ProgramDataBaseFileName="$(IntDir)\vc80.pdb"
 				WarningLevel="0"
 				SuppressStartupBanner="true"
 				CompileAs="2"
@@ -356,11 +356,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="glew32.lib libshader.lib "
-				OutputFile=".\Release/myinterface.exe"
+				AdditionalDependencies="glew32.lib libshader_r.lib "
+				OutputFile="$(OutDir)\$(ProjectName).exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="&quot;C:\Program Files\CGAL-3.3.1\lib&quot;;&quot;C:\Program Files\CGAL-3.3.1\auxiliary\gmp\lib&quot;"
+				AdditionalLibraryDirectories=""
 				ProgramDatabaseFile=".\Release/myinterface.pdb"
 				SubSystem="1"
 				TargetMachine="1"
