[2015/06/24] added      CMakeLists.txt 1. [1ST] Add the Cmake file for the entire project.
added      entropy_final_3D/OSUFlow_sequential/CMakeLists.txt
1. [1ST] Add the cmake file for the patched OSUFlow.

deleted    entropy_final_3D/OSUFlow_sequential/gldraw2.C
deleted    entropy_final_3D/OSUFlow_sequential/gldraw3.C
deleted    entropy_final_3D/OSUFlow_sequential/gldraw_back_nov_20.C
deleted    entropy_final_3D/OSUFlow_sequential/testmain.C
deleted    entropy_final_3D/OSUFlow_sequential/testmain2.C
deleted    entropy_final_3D/OSUFlow_sequential/testmain3.C
1. [KIL] Remove non-used files.

modified   entropy_final_3D/OSUFlow_sequential/gldraw.C
1. [MOD] Initialized nSeeds to 0.
2. [MOD] Include patch.txt as a constant (so no need to load the files in the run time).

modified   entropy_final_3D/OSUFlow_sequential/header.h
1. [MOD] Define assert by ASSER_OR_LOG (so it can be used in RELEASE mode as well).

added      entropy_final_3D/OSUFlow_sequential/patch.txt
1. [1ST] Check in the patches for spherical coordinates.

added      FlowDiffusionCudaLib/CMakeLists.txt
1. [1ST] Add the cmake file for the library to compute entropy field.

modified   FlowDiffusionCudaLib/FlowDiffusion.cu
1. [MOD] Use the expression "if	COMPUTE_ENTROPY_VOLUME == COMPUTE_ENTROPY_VOLUME_CUDA" to decide which kernel to use.
2. [MOD] Correct a bug when allocating piAngleMap on GPU.

modified   FlowDiffusionCudaLib/FlowDiffusion.h
1. [DEL] Remove cudpp-related codes.
2. [DEL] Define the macros CLOCK_... for backward compatibility. 
3. [MOD] Define assert by ASSER_OR_LOG (so it can be used in RELEASE mode as well).

modified   FlowDiffusionCudaLib/FlowDiffusion_cuda.h
1. [MOD] Use COMPUTE_ENTROPY_VOLUME_WITH_SORTING_IN_VECTORS_CUDA as the algorithm.

modified   FlowEntropyViewer/CMakeLists.txt
1. [MOD] Use find_package to simplify the logic.

modified   FlowEntropyViewer/FlowEntropyWin_SphericalHistogram.cpp
1. [MOD] Remove the non-used header FlowDiffusionCudaLib/FlowDiffusion.h.

git-svn-id: s

--- a/FlowEntropyViewer/CMakeLists.txt
+++ b/FlowEntropyViewer/CMakeLists.txt
@@ -17,19 +17,24 @@ include_directories(
 	)
 
 
-set(MYLIB_DIR "~/mylib" CACHE PATH "Path to mylib.")
-include_directories(
-	"${MYLIB_DIR}/include"
-)
-link_directories(
-	"${MYLIB_DIR}/lib"
-)
-add_definitions(
-	-DUSE_FREEGLUT
-	-DWITH_STATIC_LINK 
-	-DFREEGLUT_STATIC
-	-DGLEW_STATIC
-)	
+# # MOD-BY-LEETEN 2015/06/24-FROM:
+# set(MYLIB_DIR "~/mylib" CACHE PATH "Path to mylib.")
+# include_directories(
+	# "${MYLIB_DIR}/include"
+# )
+# link_directories(
+	# "${MYLIB_DIR}/lib"
+# )
+# add_definitions(
+	# -DUSE_FREEGLUT
+	# -DWITH_STATIC_LINK 
+	# -DFREEGLUT_STATIC
+	# -DGLEW_STATIC
+# )	
+# # MOD-BY-LEETEN 2015/06/24-TO:
+find_package(mylib)
+find_package(osuflow)
+# # MOD-BY-LEETEN 2015/06/24-END
 
 list(APPEND HEADER_FILES 
 	FlowEntropyViewerWin.h 
