[2015/06/25] Use double precision for the patches, and remove the dependencies to cudpp.
modified   entropy_final_3D/OSUFlow_sequential/gldraw.C
1. [MOD] Use double precision for the patches.

modified   FlowDiffusionCudaLib/CMakeLists.txt
1. [DEL] Remove the dependencies to cudpp.

git-svn-id: svn+ssh://repo.recheliu.org/home/leeten/ext/repos/SVN/FlowEntropy/trunk@237 eaa6695f-5702-45ae-85b7-ecd018c7cb11

--- a/FlowDiffusionCudaLib/CMakeLists.txt
+++ b/FlowDiffusionCudaLib/CMakeLists.txt
@@ -8,7 +8,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 find_package(CUDA)
 find_package(ThirdPartyLib)
 find_package(mylib)
-find_package(cudpp)
+# DEL-BY-LEETEN 2015/06/25:	find_package(cudpp)
 
 list(APPEND INC_DIRS
 	${CUDA_TOOLKIT_ROOT_DIR}/include
