[2015/06/25] Add the missing headers, and convert the shaders to headers when generating the makefiles. Added      FlowDiffusionCudaLib/FlowDiffusion3DConfig.h 1. [1ST] Add the missing headers.
Modified   FlowEntropyViewer/CMakeLists.txt
1. [ADD] Convert the shaders to headers when generating the makefiles.

--- a/FlowEntropyViewer/CMakeLists.txt
+++ b/FlowEntropyViewer/CMakeLists.txt
@@ -47,12 +47,26 @@ foreach(SHADER ${SHADER_FILES})
 	)
 	file(TO_NATIVE_PATH ${SHADER} SHADER_NATIVE_PATH)
 	set(SHADER_OUTPUT_NATIVE_PATH ${SHADER_NATIVE_PATH}.h)
+    
+    # TEST-ADD-BEGIN
+    # Force CMake to convert shader codes to headers first.
+    execute_process(COMMAND 
+        ${mylib_DIR}/bin/shader2string
+        ${SHADER_NATIVE_PATH} 
+        ${SHADER_OUTPUT_NATIVE_PATH}
+        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+        )
+    # TEST-ADD-END
+    
 	add_custom_command (
 		OUTPUT ${SHADER}.h
 		MAIN_DEPENDENCY ${SHADER}
 		DEPENDS ${SHADER}
-		COMMAND ${MYLIB_DIR}/bin/shader2string "${SHADER_NATIVE_PATH}" "${SHADER_OUTPUT_NATIVE_PATH}"
+		# TEST-MOD: COMMAND ${MYLIB_DIR}/bin/shader2string "${SHADER_NATIVE_PATH}" "${SHADER_OUTPUT_NATIVE_PATH}"
+        COMMAND ${mylib_DIR}/bin/shader2string "${SHADER_NATIVE_PATH}" "${SHADER_OUTPUT_NATIVE_PATH}"
+        # TEST-MOD-END
 	)
+    
 endforeach(SHADER)
 	
 # build the project as a library
