[2015/06/27] Add FlowEntropyViewer. Modified   CMakeLists.txt 1. [ADD] Add FlowEntropyViewer.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,6 @@ include_directories(entropy_final_3D/OSUFlow_sequential)
 add_subdirectory(entropy_final_3D/OSUFlow_sequential)
 add_dependencies(OSUFlowExe FlowDiffusionCudaLib)
 
-# add_subdirectory(FlowEntropyViewer)
+# TEST-MOD: # add_subdirectory(FlowEntropyViewer)
+add_subdirectory(FlowEntropyViewer)
+# TEST-MOD-END
