[2017/04/19] Fix the path for shaders, and use the new scheme to create headers for shaders, and revise for Visual Studio 2015.
Modified   FlowEntropyViewer/CMakeLists.txt
1. [MOD] Add the source dirpath when getting the shader's native file path.
2. [ADD] Add the shader files to the source code.

Modified   FlowEntropyViewer/FlowEntropyViewerWin.cpp
1. [ADD] Name the content of shaders from mylib.

Modified   FlowEntropyViewer/importance_culling.frag
Modified   FlowEntropyViewer/importance_filling.frag
Modified   FlowEntropyViewer/ray_integral.frag
1. [MOD] Add "/" to the beginning of included paths.

Modified   entropy_final_3D/OSUFlow_sequential/entropy.C
1. [DEL] Remove the definition of log2.

Modified   entropy_final_3D/OSUFlow_sequential/entropy.h
1. [DEL] Remove the declaration of log2.

--- a/FlowEntropyViewer/CMakeLists.txt
+++ b/FlowEntropyViewer/CMakeLists.txt
@@ -45,7 +45,9 @@ foreach(SHADER ${SHADER_FILES})
 	list(APPEND SHADER_HEADERS
 		${PROJECT_SOURCE_DIR}/${SHADER}.h
 	)
-	file(TO_NATIVE_PATH ${SHADER} SHADER_NATIVE_PATH)
+	# TEST-MOD: file(TO_NATIVE_PATH ${SHADER} SHADER_NATIVE_PATH)
+    file(TO_NATIVE_PATH ${PROJECT_SOURCE_DIR}/${SHADER} SHADER_NATIVE_PATH)
+    # TEST-MOD-END
 	set(SHADER_OUTPUT_NATIVE_PATH ${SHADER_NATIVE_PATH}.h)
     
     # Force CMake to convert shader codes to headers first.
@@ -71,6 +73,9 @@ add_executable(
 	${SRC_FILES} 
 	${HEADER_FILES}
 	${SHADER_HEADERS} 
+    # TEST-ADD-BEGIN
+    ${SHADER_FILES}
+    # TEST-ADD-END
 	)
 
 
